--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -102,11 +102,11 @@
                                 </div>
                                 <div class="panel-body">
                                     <div class="column">
-                                        <button class="figure btn btn-default" ng-click="initEntity()">Сущность</button>
-                                        <button class="figure btn btn-default" ng-click="initAttribute()">Атрибут</button>
+                                        <button class="figure btn btn-default" ng-click="initEntity('empty');">Сущность</button>
+                                        <button class="figure btn btn-default" ng-click="initAttribute();">Атрибут</button>
                                     </div>
                                     <div class="column">
-                                        <button class="figure btn btn-default" ng-click="initAssociation()">Ассоциация</button>
+                                        <button class="figure btn btn-default" ng-click="initAssociation();">Ассоциация</button>
                                     </div>
                                 </div>
                             </div>
@@ -117,7 +117,7 @@
                             </h3>
                         </div>
                         <div class="panel-body">
-                            <select class="list" size="5" id="List3">
+                            <select class="list" ng-dblclick="initEntity();" size="5" id="List3">
                             </select>
                         </div>
                     </div>
