--- a/pg/login.html
+++ b/pg/login.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html ng-app="Cache">
+<html> 
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
 	<link rel="stylesheet" href="../css/login.css">
-	<script src="../js/angular.min.js" type="text/javascript"></script>
-	<!--	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>-->
 	<script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
-
+	<script src="../js/angular.min.js" type="text/javascript"></script>
+	<script src="../js/app.js" type="text/javascript"></script>
 	<script src="../js/controllers/login-controller.js" type="text/javascript"></script>
 
 </head>
 
-<body ng-controller="LoginController">
+<body  ng-app="cache" ng-controller="LoginController">
 	<div class="headerBlock"></div>
 	<div id="mainDiv" ng-class="{mainBlock: student, 'mainBlockTeacher': teacher}">
 		<div class="typeOf">
