--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="../css/draw.css">
+    <link rel="stylesheet" href="../css/object_models.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
+    <script src="../js/app.js" type="text/javascript"></script>
     <script src="../js/joint.js"></script>
     <script src="../js/snap.svg.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
     <script src="../js/textbox.js" type="text/javascript"></script>
+    <script src="../js/controllers/object-diagram-controller.js "></script>
 
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">-->
 
@@ -25,7 +28,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body ng-app="cache" >
     <!-- Header -->
     <div class="headerDiv">
          <div class="icondiv">
@@ -103,7 +106,7 @@
             </div>
 
             <div id="div2" name="contentDiv">
-                <div ng-app="cache" ng-controller="drawController">
+                <div ng-controller="drawController">
                     <div class="drawer">
                         <div class="tools border">
                             <div class="figures panel panel-default">
@@ -148,7 +151,30 @@
                     </div>
                 </div>
             </div>
-            <div id="div3" name="contentDiv">3</div>
+            <div id="div3" name="contentDiv" ng-controller="objectDiagramController">
+
+		<div class="models">
+			<div class="panel panel-default functional-model model">
+			    <div class="panel-heading">
+				<h3 class="panel-title">Функциональная модель</h3>
+			    </div>
+			    <div id="functional-model" class="panel-body"> </div>
+			    <div class="figuresBar panel panel-default">
+				<input type="button" ng-click="initActor()" value="Актер" class="btn btn-default">
+				<input type="button" ng-click="initService()" value="Сервис" class="btn btn-default">
+		 	   </div>
+			</div>
+			<div class="panel panel-default object-relation-model model">
+			    <div class="panel-heading">
+				<h3 class="panel-title">Взаимодействия объектов</h3>
+			    </div>
+			    <div id="object-relation-model" class="panel-body"></div>
+			    <div class="figuresBar panel panel-default">
+				<input type="button" ng-click="initObject()" value="Объект" class="btn btn-default">
+                            </div>
+			</div>
+		</div>
+	    </div>
             <div id="div4" name="contentDiv">4</div>
             <div id="div5" name="contentDiv">5</div>
         </div>
