--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="../css/draw.css">
     <link rel="stylesheet" href="../css/object_models.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
@@ -21,11 +21,7 @@
     <script src="../js/workenv.js" type="text/javascript"></script>
     <script src="../js/textbox.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
-
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">-->
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </head>
 
 <body ng-app="cache" >
