--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -13,13 +13,12 @@
     <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
-    <script src="../js/app.js" type="text/javascript"></script>
-    <script src="../js/joint.js"></script>
+    <script src="../js/joint.js" type="text/javascript"></script>
     <script src="../js/snap.svg.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
-    <script src="../js/textbox.js" type="text/javascript"></script>
+    <script src="../js/concept.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
     <script src="../js/bootstrap.min.js"></script>
 </head>
