--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="../css/draw.css">
+    <link rel="stylesheet" href="../css/dialog.css">
     <link rel="stylesheet" href="../css/object_models.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
+    <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <script src="../js/joint.js" type="text/javascript"></script>
+    <script src="../js/joint.shapes.erd.js" type="text/javascript"></script>
     <script src="../js/snap.svg.js" type="text/javascript"></script>
-    <script src="../js/draw.js" type="text/javascript"></script>
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
     <script src="../js/concept.js" type="text/javascript"></script>
+    <script src="../js/app.js" type="text/javascript"></script>
+    <script src="../js/draw.js" type="text/javascript"></script>
+    <script src="../js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
+    <script src="../js/controllers/use-case-controller.js "></script>
     <script src="../js/bootstrap.min.js"></script>
 </head>
 
@@ -103,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div id="div2" name="contentDiv" ng-controller="objectDiagramController">
+            <div id="div2" name="contentDiv" ng-controller="UseCaseController">
 		<div class="panel panel-default functional-model model">
 		    <div class="panel-heading">
 			<h3 class="panel-title">Функциональная модель</h3>
@@ -114,8 +120,28 @@
 			<input type="button" ng-click="initService()" value="Сервис" class="btn btn-default">
 		   </div>
 		</div>
+		<div class="canvas panel panel-default border" ng-click="closeOptions()">
+		    <div class="dialog panel options panel-default" ng-show="optionsShow">
+			<div class="list-group">
+			    <a href="#" class="list-group-item" ng-click="renameObj()">Переименовать</a>
+			    <a href="#" class="list-group-item list-group-item-danger" ng-click="deleteObj()">Удалить</a>
+			</div>
+		    </div>
+		    <div class="dialog change-name panel panel-default" ng-show="renameShow">
+			<div class="panel-heading">
+			    <h3 class="panel-title">Введите название</h3>
+			</div>
+			<div class="panel-body">
+			    <input type="text" ng-model="renameValue" class="form-control" />
+			</div>
+			<div class="panel-footer">
+			    <input type="button" ng-click="cancelChange()" class="btn btn-default" value="Cancel" />
+			    <input type="button" ng-click="submitChange()" class="btn btn-primary" value="Save changes" />
+			</div>
+		    </div>
+		</div>
 	    </div>
-            <div id="div3" name="contentDiv">
+            <div id="div3" name="contentDiv" ng-controller="ObjectDiagramController">
 		<div class="panel panel-default object-relation-model model">
 		    <div class="panel-heading">
 			<h3 class="panel-title">Взаимодействия объектов</h3>
@@ -125,8 +151,82 @@
 			<input type="button" ng-click="initObject()" value="Объект" class="btn btn-default">
 		    </div>
 		</div>
+		<div class="canvas panel panel-default border" ng-click="closeOptions()">
+		    <div id="canvas">
+		    </div>
+		    <div class="dialog panel options panel-default" ng-show="optionsShow">
+			<div class="list-group">
+			    <a href="#" class="list-group-item" ng-click="renameObj()">Переименовать</a>
+			    <a href="#" class="list-group-item list-group-item-danger" ng-click="deleteObj()">Удалить</a>
+			</div>
+		    </div>
+		    <div class="dialog change-name panel panel-default" ng-show="renameShow">
+			<div class="panel-heading">
+			    <h3 class="panel-title">Введите название</h3>
+			</div>
+			<div class="panel-body">
+			    <input type="text" ng-model="renameValue" class="form-control" />
+			</div>
+			<div class="panel-footer">
+			    <input type="button" ng-click="cancelChange()" class="btn btn-default" value="Cancel" />
+			    <input type="button" ng-click="submitChange()" class="btn btn-primary" value="Save changes" />
+			</div>
+		    </div>
+		</div>
             </div>
-            <div id="div4" name="contentDiv">
+            <div id="div4" name="contentDiv" ng-controller="ERController">
+		<div class="panel panel-default er-model model">
+		    <div class="panel-heading">
+			<h3 class="panel-title">ER диаграмма</h3>
+		    </div>
+		    <div id="er-model" class="panel-body"></div>
+		    <div class="figuresBar panel panel-default">
+			<input type="button" ng-click="initEntity()" value="Сущность" class="btn btn-default">
+			<input type="button" ng-click="initAttribute()" value="Атрибут" class="btn btn-default">
+			<input type="button" ng-click="initAssociation()" value="Ассоциация" class="btn btn-default">
+		    </div>
+		</div>
+		<div class="canvas panel panel-default border" ng-click="closeObjectOptions()">
+		    <div class="dialog panel options panel-default" ng-show="objectOptionsShow">
+			<div class="list-group">
+			    <a href="#" class="list-group-item" ng-click="renameObj()">Переименовать</a>
+			    <a href="#" class="list-group-item list-group-item-danger" ng-click="deleteObj()">Удалить</a>
+			</div>
+		    </div>
+		    <div class="dialog change-name panel panel-default" ng-show="renameShow">
+			<div class="panel-heading">
+			    <h3 class="panel-title">Введите название</h3>
+			</div>
+			<div class="panel-body">
+			    <input type="text" ng-model="renameValue" class="form-control" />
+			</div>
+			<div class="panel-footer">
+			    <input type="button" ng-click="cancelRename()" class="btn btn-default" value="Cancel" />
+			    <input type="button" ng-click="submitRename()" class="btn btn-primary" value="Save changes" />
+			</div>
+		    </div>
+		    <div class="dialog change-link panel panel-default" ng-show="linkOptionsShow">
+			<div class="panel-heading">
+			    <h3 class="panel-title">Измение отношения</h3>
+			</div>
+			<div class="panel-body">
+			    <select ng-model="linkLabels[1]" class="form-control" />
+				<option>1</option>
+				<option>M</option>
+			    </select>
+			    <select ng-model="linkLabels[2]" class="form-control" />
+				<option>1</option>
+				<option>M</option>
+			    </select>
+			</div>
+			<div class="panel-footer">
+			    <input type="button" ng-click="cancelRename()" class="btn btn-default" value="Cancel" />
+			    <input type="button" ng-click="submitRename()" class="btn btn-primary" value="Save changes" />
+			</div>
+		    </div>
+		</div>
+	    </div>
+            <div id="div5" name="contentDiv">
                 <div ng-controller="drawController">
                     <div class="drawer">
                         <div class="tools border">
@@ -157,8 +257,8 @@
                     </div>
                         </div>
                         <div class="canvas panel panel-default border" ng-click="closeOptions()">
-                            <svg id="canvas">
-                            </svg>
+                            <div id="canvas">
+                            </div>
                             <div class="dialog change-name panel panel-default" ng-show="renameShow">
                                 <div class="panel-heading">
                                     <h3 class="panel-title">Введите название</h3>
@@ -180,8 +280,7 @@
                         </div>
                     </div>
                 </div>
-</div>
-            <div id="div5" name="contentDiv">5</div>
+		</div>
         </div>
     </div>
     <!-- Footer -->
