--- a/pg/projects.html
+++ b/pg/projects.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/project.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -25,12 +26,12 @@
     </div>
     <div class="maindiv">
         <div class="leftDivBut">
-            <div style="padding: 20px;">
+            <div style="padding: 5%;">
                 <div class="gorizont">
                     <div class="selects panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">
-                            Что дальше?
+                            Проекты:
                             </h3>
                         </div>
                     </div>
@@ -38,56 +39,75 @@
                 <div class="gorizont">
                 <div class="inputs panel panel-default">
                         <div style="padding:0;" class="panel-body">
-                             <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="Продолжить работу" onclick="alert('Продолжаем работу')">
-                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="Выбрать другой документ" onclick="alert('Открывается дкумент')">
-                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="Загрузить новый документ" onclick="alert('Загружается документ')">
+                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="кококо">
+                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="мимими" >
+                            <input type="button" style="border:none; width: 100%; height:20%; margin:0;" class="btn btn-default" value="ляляля" >
                         </div>
                 </div>
                 </div>
             </div>
         </div>
-        <div class="rightDiv">
-            <div style="padding: 20px;">
+    <div class="rightDiv">
+        <div style="padding: 2%;">
                 <div class="gorizont">
-                    <div class="selects panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">
+                    <div class="well well-small">
+                            <h3 class="panel-title full-screen">
                             Личная информация:
+                                <button style="margin-left: 52%;" type="button" class="btn btn-default btn-small">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </button>
                             </h3>
                         </div>
                     </div>
-                </div>
+            </div>
                 <div class="gorizont">
-                    <div class="inputs panel panel-default">
-                        <h4 class="panel-body">
-                            Группа: ПИ-13-1
 
-                        </h4>
-                        <h4 class="panel-body">
-                            Адрес: Тишки
-                        </h4>
-                        <h4 class="panel-body">
-                            Работает над проектом: cache
-                        </h4>
+                    <div class= "full-screen">
+                        <div class = "padd">
+                        <div class="choice panel panel-body panel-default">
+                            <h4>
+                                Группа: ПИ-13-1
+                            </h4>
+                            <h4>
+                                Адрес: Тишки
+                            </h4>
+                            <h4>
+                                Работает над проектом: cache
+                            </h4>
+                        </div>
+                      </div>
                     </div>
                 </div>
+
+
+            <div class = "padd">
                 <div class="gorizont">
-                    <div class="panel">
-                        <div class="panel-heading">
-                            <h3 >
+                    <div class="well well-small">
+                            <h3 class="panel-title full-screen">
                             Преподаватели:
+                                 <button style="margin-left: 54.5%;" type="button" class="btn btn-default btn-small">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                </button>
                             </h3>
                         </div>
                     </div>
                 </div>
+            <div class="gorizont">
+                <div class= "full-screen">
+                        <div class = "padd">
+                        <div class="choice panel panel-body panel-default">
+                            <h4>
+                                Петросян
+                            </h4>
+                            <h4>
+                                Петросян
+                            </h4>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-
-
-
-
-
     <div class="footerDiv">
     </div>
 </body>
