--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -7,13 +7,13 @@
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/workenv.css">
-    <link rel="stylesheet" href="../css/draw.css">
     <link rel="stylesheet" href="../css/dialog.css">
+    <link rel="stylesheet" href="../css/draw.css">
     <link rel="stylesheet" href="../css/object_models.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
+    <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
     <script src="../js/joint.js" type="text/javascript"></script>
     <script src="../js/joint.shapes.erd.js" type="text/javascript"></script>
@@ -119,8 +119,6 @@
 			<input type="button" ng-click="initActor()" value="Актер" class="btn btn-default">
 			<input type="button" ng-click="initService()" value="Сервис" class="btn btn-default">
 		   </div>
-		</div>
-		<div class="canvas panel panel-default border" ng-click="closeOptions()">
 		    <div class="dialog panel options panel-default" ng-show="optionsShow">
 			<div class="list-group">
 			    <a href="#" class="list-group-item" ng-click="renameObj()">Переименовать</a>
@@ -146,13 +144,10 @@
 		    <div class="panel-heading">
 			<h3 class="panel-title">Взаимодействия объектов</h3>
 		    </div>
-		    <div id="object-relation-model" class="panel-body"></div>
+		    <div id="object-relation-model" class="panel-body">
+		    </div>
 		    <div class="figuresBar panel panel-default">
 			<input type="button" ng-click="initObject()" value="Объект" class="btn btn-default">
-		    </div>
-		</div>
-		<div class="canvas panel panel-default border" ng-click="closeOptions()">
-		    <div id="canvas">
 		    </div>
 		    <div class="dialog panel options panel-default" ng-show="optionsShow">
 			<div class="list-group">
@@ -185,8 +180,6 @@
 			<input type="button" ng-click="initAttribute()" value="Атрибут" class="btn btn-default">
 			<input type="button" ng-click="initAssociation()" value="Ассоциация" class="btn btn-default">
 		    </div>
-		</div>
-		<div class="canvas panel panel-default border" ng-click="closeObjectOptions()">
 		    <div class="dialog panel options panel-default" ng-show="objectOptionsShow">
 			<div class="list-group">
 			    <a href="#" class="list-group-item" ng-click="renameObj()">Переименовать</a>
@@ -207,7 +200,7 @@
 		    </div>
 		    <div class="dialog change-link panel panel-default" ng-show="linkOptionsShow">
 			<div class="panel-heading">
-			    <h3 class="panel-title">Измение отношения</h3>
+			    <h3 class="panel-title">Изменение отношения</h3>
 			</div>
 			<div class="panel-body">
 			    <select ng-model="linkLabels[1]" class="form-control" />
