--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -7,9 +7,7 @@
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/workenv.css">
-    <link rel="stylesheet" href="../css/dialog.css">
-    <link rel="stylesheet" href="../css/draw.css">
-    <link rel="stylesheet" href="../css/object_models.css">
+    <link rel="stylesheet" href="../css/diagram.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
