--- a/pg/registration.html
+++ b/pg/registration.html
@@ -1,56 +1,61 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html ng-app>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="../css/registration.css">
-    <script src="../js/jquery-2.1.3.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
-    <script src="../js/registration.js" type="text/javascript"></script>
+<title>REST Academy</title>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
+<script language="javascript">
+function ctrl($scope,$http) {
+    // Запрос GET к RESTful web API
+        $scope.getCompanies=function() {
+       $http.get("http://localhost:57772/csp/rest/json/humans").success(function(data) {
+             // Помещаем ответ сервера в переменную companies
+           $scope.companies=data.children;
+       }).error(function(data, status) {
+                 // Вывод информации об ошибке, если таковая возникнет
+           alert("["+status+"] Ошибка при загрузке компаний! ["+data+"]");
+       });
+   };
+  
+      // Создать новую компанию
+    $scope.create = function (company){
+       $http.post("http://localhost:57772/csp/rest/json/company",company)
+       .success(function(data){$scope.getCompanies();$scope.alertzone="Добавили компанию "+company.Name;}).error(function(data,status){
+        $scope.alertzone="["+status+"] Ошибка добавления компании :( ["+data+"]"; });
+    }
 
+    // Обновить существующую компанию
+  $scope.update = function (company){
+       $http.put("/rest/json/company/"+company.ID,company)
+        .success(function(data){$scope.alertzone="Обновили компанию "+company.Name;}).error(function(data,status){ // поменял alert(....); на alertzone
+        $scope.alertzone="["+status+"] Ошибка обновления имени компании :( ["+data+"]"; });
+    }
+            
+    // Удалить компанию
+    $scope.delete = function (company){
+        $http.delete("/rest/json/company/"+company.ID)
+        .success(function(data){$scope.getCompanies();$scope.alertzone="Удалили компанию "+company.Name;}).error(function(data,status){
+            $scope.alertzone="["+status+"] Ошибка удаления компании :( ["+data+"]"; });
+    }
+};
+</script>
 </head>
+<body ng-controller="ctrl" ng-init="getCompanies();">
 
-<body ng-controller="ctrl">
-<div class="headerBlock"></div>
-<div id="mainDiv" class="mainBlock">
-   <div class="typeOf">
-       <div id="studDiv" class="student" onclick="showHide('student_field', 'teacher_field')">Student</div>
-       <div id="teachDiv" class="teacher" onclick="showHide('teacher_field', 'student_field')">Teacher</div>
-    </div>
+<h4 ng-model="alertzone"><font color=red>{{alertzone}}</font></h4>
 
-    <div class="container_form">
-<div id="registration_box">
-	<div id="registration_result"></div>
-	<form id="registration_form" ng-model="human" ng-submit="postData(human); human='';">
-		<label for="name">Имя:</label>
-		<input name="name" id="name" /><br/>
-
-        <div id="student_field" >
-		    <label for="group">Группа:</label>
-		    <input name="group" id="group" /><br/>
-        </div>
-		<div id="teacher_field" >
-		    <label for="cathedra">Кафедра:</label>
-		    <input name="cathedra" id="cathedra" /><br/>
-		    <label for="post" >Должность:</label>
-		    <input name="post" id="post"  /><br/>
-        </div>
-
-		<label for="username">Логин:</label>
-		<input name="username" id="username" /><br/>
-		<label for="email">E-mail:</label>
-		<input name="email" id="email" /><br/>
-		<label for="password">Пароль:</label>
-		<input name="password" id="password" /><br/>
-		<label for="repeat_password">Повторить пароль:</label>
-		<input name="repeat_password" id="repeat_password" /><br/>
-
-		<input name="Submit" type="submit" id="submit" value="Registration" /><br/>
-	</form>
+<form name="compCreateForm" ng-model="company" ng-submit="create(company); company='';">
+    Id <input type="text" ng-model="company.Id"/>
+	Login <input type="text" ng-model="company.Login"/>
+	Password <input type="password" ng-model="company.Password"/>
+    <input type="submit" value="Добавить"/>
+</form>
+<br>
+<div ng-repeat="company in companies">
+    <form name="compForm" ng-submit="update(company); compForm.$setPristine();">
+        <input type="text" ng-model="company.Name"/>
+        <input type="submit" value="Сохранить" ng-show="compForm.$dirty"/>
+        <input type="button" value="X" ng-click="delete(company);"/>
+    </form>
 </div>
-</div>
-</div>
-<div class="footerBlock"></div>
 </body>
 </html>
